syntax="proto2";

message Reply {
    required int32 id = 1;
    required int32 error_code = 2;
}

message CreateScene {
    required string name = 1;
}

message DestroyScene {
    required int32 id = 1;
}

message CreateMemory {
    required int32 scene_id = 1;
    required int32 size = 2;
}

message CreateDataObject {
    enum Type {
        VERTEX = 0;
        NORMAL = 1;
        INDEX = 2;
        COLOR = 3;
        UV = 4;
        TEXTURE = 5;
        MATRIX = 6;
        PROGRAM = 7;
        REGISTER = 8;
    }
    required int32 scene_id = 1;
    required int32 memory_id = 2;
    required int32 memory_offset = 3;
    required int32 memory_length = 4;
    required int32 item_length = 5;
    required int32 data_length = 6;
    required Type type = 7;
}

message CreateTextureObject {
    enum Format {
        BGR888 = 0;
        XBGR8888 = 1;
        ABGR8888 = 2;
        RGB888 = 3;
        XRGB8888 = 4;
        ARGB8888 = 5;
    }
    enum Type {
        TEXTURE_2D = 0;
        TEXTURE_CUBE_MAP = 1;
    }
    required int32 scene_id = 1;
    required int32 data_id = 2;
    required int32 width = 3;
    required int32 height = 4;
    required Format format = 5;
    required Type type = 6;
}

message CreateProgram {
    required int32 scene_id = 1;
    required int32 data_id = 2;
}

message RunProgram {
    required int32 scene_id = 1;
    required int32 program_id = 2;
    required int32 register_id = 3;
}

message UpdateSystemMatrix {
    enum MatrixType {
        HEAD = 0;
        BODY = 1;
    }
    enum UpdateType {
        MULTIPLY = 0;
        SET = 1;
    }
    required int32 scene_id = 1;
    required int32 data_id = 2;
    required int32 data_index = 3;
    required MatrixType matrix_type = 4;
    required UpdateType update_type = 5;
}

message DestroyDataObject {
    required int32 scene_id = 1;
    required int32 id = 2;
}

message CreateGeometryObject {
    required int32 scene_id = 1;
    required int32 vertex_id = 2;
    required int32 normal_id = 3;
    required int32 index_id = 4;
}

message CreateMeshColor {
    required int32 scene_id = 1;
    required int32 geometry_id = 2;
    required float r = 3;
    required float g = 4;
    required float b = 5;
    required float a = 6;
}

message CreateMeshTexture {
    required int32 scene_id = 1;
    required int32 geometry_id = 2;
    required int32 texture_id = 3;
    required int32 uv_id = 4;
}

message CreateSkybox {
    required int32 scene_id = 1;
    required int32 texture_id = 3;
    required int32 size = 4;
}
